src/main/metadata/objects/QC__c.object
<CustomObject>
    <fields>
        <fullName>SSL__c</fullName>
        <inlineHelpText>1.Fluency in the call, no spoken language, dialect and other unprofessional language;
2.No "Yes, Yes, of course, that's it, Oh, Oh," or unnecessary, such as "this ... The ... Hmm ...&quot; spoken language and dialects；</inlineHelpText>
        <label>Specification - Spoken Language</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SS_Comments__c</fullName>
        <label>Soft Skill Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SoftSkill__c</fullName>
        <!--<inlineHelpText>Language expression
1.Narrative fluency, detail proper, professional, concise expression; a clear logical, matching the customer's awareness.
2.Control, call time, grasp the phone theme
3.Guests questions to answer/does not appear inappropriate to respond to customers in a timely manner (except in dialect, the line is not clear)
Ability to listen
1.In the case of customers have expressed a clear, without customers and keep repeating the same information twice (not including two)
2.Don't ignore customers or ask for additional information</inlineHelpText>-->
        <label>Soft Skill</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non-fatal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fatal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SpecificationLanguage__c</fullName>
        <!--<inlineHelpText>1.With the standard Mandarin, namely clarity, proper use of polite language
2.Unused in calls such as &quot;Hey, I don't know, I don't know, AH (rising tone), won, OK, OK, Ah, you,?&quot;, and other inappropriate language
3.No spoken language, dialect and other unprofessional language</inlineHelpText>-->
        <label>Specification Language</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non-fatal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fatal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disqualified</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Supervisor_Comments__c</fullName>
        <label>Supervisor Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Supervisor_Review__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supervisor Review</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TSOC_Comments__c</fullName>
        <label>The Standard Opening/Closing Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TSOC_DeductedReason__c</fullName>
        <inlineHelpText>1. Introduction
2. A closing</inlineHelpText>
        <label>The Standard Opening Deducted Reason</label>
        <picklist>
            <picklistValues>
                <fullName>1.Opening</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.Closing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>TaskLink__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ Task_ID__c , &quot;View Task&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaskName__c</fullName>
        <label>Task Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_ID__c</fullName>
        <label>Task ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Task_Link_ID__c</fullName>
        <formula>LEFT( Task_ID__c , 15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Task Link ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TheStandardOpeningClosing__c</fullName>
        <!--<inlineHelpText>Opening remarks
1.Using a standard prologue, says do not leak or to the wrong
2.Moderate tempo, clarity
3.Started by show, including willingness to serve language and take the initiative to ask the customer name
Concluding remarks:
1.Using the standard closing, well the cat says
2.Speed is moderate, does not appear impatient or speaking too fast to express lack of clarity</inlineHelpText>-->
        <label>The Standard Opening/Closing</label>
        <picklist>
            <picklistValues>
                <fullName>Pass</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non-fatal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fatal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TotalScore__c</fullName>
        <formula>IF(ISPICKVAL(Status__c , &apos;Cancel&apos;),
0,
MAX(
    100 - CASE(TEXT(ClarificationCustomerDemand__c), &apos;Non-fatal&apos;, 5, &apos;Fatal&apos;, 15, 0)
    - CASE(TEXT(CustomerPerception__c), &apos;Non-fatal&apos;, 5, &apos;Fatal&apos;, 15, 0)
    - CASE(TEXT(Document__c), &apos;Non-fatal&apos;, 5, &apos;Fatal&apos;, 15, 0)
    - CASE(TEXT(FollowTheOperationProcess__c), &apos;Non-fatal&apos;, 5, &apos;Fatal&apos;, 15, 0)
    - CASE(TEXT(LogicInterpretation__c), &apos;Non-fatal&apos;, 5, &apos;Fatal&apos;, 15, 0)
    - CASE(TEXT(OfflinePrompt__c), &apos;Non-fatal&apos;, 5, &apos;Fatal&apos;, 15, 0)
    - CASE(TEXT(ProperPronunciation__c), &apos;Non-fatal&apos;, 5, &apos;Fatal&apos;, 15, 0)
    - CASE(TEXT(ProvideTheRightSolution__c), &apos;Non-fatal&apos;, 5, &apos;Fatal&apos;, 15, 0)
    - CASE(TEXT(SoftSkill__c), &apos;Non-fatal&apos;, 5, &apos;Fatal&apos;, 15, 0)
    - CASE(TEXT(SpecificationLanguage__c), &apos;Non-fatal&apos;, 5, &apos;Fatal&apos;, 15, 0)
    - CASE(TEXT(TheStandardOpeningClosing__c), &apos;Non-fatal&apos;, 5, &apos;Fatal&apos;, 15, 0)
    - CASE(TEXT(ADeadlyMistake__c), &apos;Non-fatal&apos;, 100, &apos;Fatal&apos;, 100, 0),
    0
) /100
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Score_1__c</fullName>
        <label>Total Score 1</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Score_2__c</fullName>
        <label>Total Score 2</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <label>Total Score</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>QC</label>
    <listViews>
        <fullName>Appealed_QC</fullName>
        <columns>NAME</columns>
        <columns>SSI__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Appeal__c</columns>
        <columns>Appeal_Comments__c</columns>
        <columns>Appeal_Result__c</columns>
        <columns>Appeal_Type__c</columns>
        <columns>Approved__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Qualified__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Appeal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Complaint inspection tasks</label>
        <language>en_US</language>
        <sharedTo>
            <role>CAC_QC_SV_TM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>GeneralCQC</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CSR_Name__c</columns>
        <columns>Appeal__c</columns>
        <columns>Appeal_Comments__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Completed Inspection tasks(this month)</label>
        <language>en_US</language>
        <sharedTo>
            <role>IB_CSR</role>
            <role>OB_CSR</role>
            <role>SSI_CSR</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_QC</fullName>
        <columns>CSR_Name__c</columns>
        <columns>SSI__c</columns>
        <columns>Status__c</columns>
        <columns>Appeal__c</columns>
        <columns>Approved__c</columns>
        <columns>NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_MONTHS:3</value>
        </filters>
        <label>My QC task</label>
        <language>en_US</language>
        <sharedTo>
            <role>IB_QC</role>
            <role>OB_QC</role>
            <role>SSI_Supervisor</role>
            <role>CAC_QC_SV_TM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Un_scored_QC</fullName>
        <columns>SSI__c</columns>
        <columns>NAME</columns>
        <columns>CSR_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Qualified__c</columns>
        <columns>Calibration__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Complete,Cancel,Disqualified</value>
        </filters>
        <label>Outstanding quality for my tasks</label>
        <language>en_US</language>
		<sharedTo>
            <role>IB_QC</role>
            <role>OB_QC</role>
            <role>SSI_Supervisor</role>
            <role>CAC_QC_SV_TM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_team_s_QC_ready_for_review</fullName>
        <columns>NAME</columns>
        <columns>SSI__c</columns>
        <columns>Supervisor_Review__c</columns>
        <columns>Supervisor_Comments__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>CSR_Name__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Total_Score__c</columns>
        <columns>QC_Overall_Comment__c</columns>
        <columns>Appeal__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Supervisor_Review__c</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Complete</value>
        </filters>
        <label>All necessary sampling data</label>
        <language>en_US</language>
        <sharedTo>
            <role>CAC_QC_SV_TM</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>SSI_QC_Queue</fullName>
        <columns>CSR_Name__c</columns>
        <columns>SSI__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>NAME</columns>
        <columns>Calibration__c</columns>
		<filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>QC__c.SSI_QC</value>
        </filters>
        <label>Task pool</label>
        <language>en_US</language>
        <sharedTo>
            <role>SSI_Supervisor</role>
            <role>CAC_QC_SV_TM</role>
        </sharedTo>	
    </listViews>
    <nameField>
        <displayFormat>QC-{000000}</displayFormat>
        <label>QC No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QC</pluralLabel>
    <recordTypes>
        <fullName>IB_QC</fullName>
        <active>true</active>
        <label>IB QC</label>
    </recordTypes>
    <recordTypes>
        <fullName>OB_QC</fullName>
        <active>true</active>
        <label>OB QC</label>
    </recordTypes>
    <recordTypes>
        <fullName>SSI_QC</fullName>
        <active>true</active>
        <description>QC for SSI</description>
        <label>SSI QC</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Lock_QC_when_Cancelled_or_Disqualified</fullName>
        <active>true</active>
        <description>QC IB/OB Description: User cannot edit canncelled QC.
QC SSI Description: User cannot edit disqualified QC.</description>
        <errorConditionFormula>AND( 
OR( $Profile.Name=&apos;CAC IB QC&apos;,  $Profile.Name =&apos;CAC OB QC&apos;, $Profile.Name=&apos;CAC SSI QC&apos;),
OR(ISPICKVAL( PRIORVALUE(Status__c ) , &apos;Cancel&apos;), ISPICKVAL( PRIORVALUE(Status__c ) , &apos;Disqualified&apos;))
)</errorConditionFormula>
        <errorMessage>The QC is Cancelled or Disqualified, you cannot edit it.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Lock_for_QC_when_complete</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
OR(
$Profile.Name = &apos;CAC IB QC&apos;, 
$Profile.Name = &apos;CAC OB QC&apos;, 
$Profile.Name = &apos;CAC SSI QC&apos;,
AND($User.FirstName = &apos;Li&apos;, $User.LastName = &apos;Li&apos;, $User.EmployeeNumber = &apos;CN654354&apos;)
),   
ISPICKVAL(PRIORVALUE( Status__c ), &apos;Complete&apos;),
OR(
ISCHANGED( Appeal__c ), 
ISCHANGED( Appeal_Comments__c ), 
ISCHANGED( Appeal_Status__c ), 
ISCHANGED( QC_Overall_Comment__c ), 
ISCHANGED( Supervisor_Review__c ), 
ISCHANGED( Status__c ), 
ISCHANGED( Supervisor_Comments__c ),

ISCHANGED(ADeadlyMistake__c), 
ISCHANGED(ClarificationCustomerDemand__c), 
ISCHANGED(LogicInterpretation__c), 
ISCHANGED(CustomerPerception__c), 
ISCHANGED(Document__c), 
ISCHANGED(FollowTheOperationProcess__c), 
ISCHANGED(OfflinePrompt__c), 
ISCHANGED(ProvideTheRightSolution__c), 
ISCHANGED(SoftSkill__c), 
ISCHANGED(SpecificationLanguage__c), 
ISCHANGED(TheStandardOpeningClosing__c), 
ISCHANGED(ProperPronunciation__c),

ISCHANGED(CP_DeductedReason__c), 
ISCHANGED(PTRS_DeductedReason__c), 
ISCHANGED(CCD_DeductedReason__c), 
ISCHANGED(Document_DeductedReason__c), 
ISCHANGED(SK_DeductedReason__c), 
ISCHANGED(TSOC_DeductedReason__c), 
ISCHANGED(OP_DeductedReason__c), 
ISCHANGED(SL_DeductedReason__c), 
ISCHANGED(PPIS_DeductedReason__c), 
ISCHANGED(ADM_DeductedReason__c), 
ISCHANGED(LIOQ_DeductedReason__c),
ISCHANGED(FTOP_DeductedReason__c),

ISCHANGED(CITQ__c), 
ISCHANGED(PACI__c), 
ISCHANGED(DA__c), 
ISCHANGED(FTOP__c), 
ISCHANGED(FMSK__c), 
ISCHANGED(FQL__c), 
ISCHANGED(SO__c), 
ISCHANGED(PPIS__c), 
ISCHANGED(SPL__c), 
ISCHANGED(SSL__c), 
ISCHANGED(SC__c), 
ISCHANGED(CALA__c), 
ISCHANGED(CAI__c), 
ISCHANGED(CARR__c), 
ISCHANGED(PFOCF__c), 
ISCHANGED(PPD__c), 
ISCHANGED(PJ__c), 
ISCHANGED(PHU__c)
))</errorConditionFormula>
        <errorMessage>The QC is completed, you cannot edit it</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>QC_must_be_accepted_before_edited</fullName>
        <active>true</active>
        <errorConditionFormula>Owner:Queue.DeveloperName = &apos;SSI_QC&apos; &amp;&amp; $Profile.Name = &apos;CAC SSI QC&apos;</errorConditionFormula>
        <errorMessage>Please Accept record first.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateQuestionireWhenComplete</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Status__c, &apos;Complete&apos;), 
OR( 
AND(
RecordType.Name == &apos;IB QC&apos;,
OR(
ISPICKVAL(ADeadlyMistake__c, &apos;&apos;), 
ISPICKVAL(ClarificationCustomerDemand__c, &apos;&apos;), 
ISPICKVAL(CustomerPerception__c, &apos;&apos;), 
ISPICKVAL(Document__c, &apos;&apos;), 
ISPICKVAL(FollowTheOperationProcess__c, &apos;&apos;), 
ISPICKVAL(OfflinePrompt__c, &apos;&apos;), 
ISPICKVAL(ProvideTheRightSolution__c, &apos;&apos;), 
ISPICKVAL(SoftSkill__c, &apos;&apos;), 
ISPICKVAL(SpecificationLanguage__c, &apos;&apos;), 
ISPICKVAL(TheStandardOpeningClosing__c, &apos;&apos;), 
ISPICKVAL(ProperPronunciation__c, &apos;&apos;) 
)
),
AND(
RecordType.Name == &apos;OB QC&apos;, 
OR(
ISPICKVAL(ADeadlyMistake__c, &apos;&apos;), 
ISPICKVAL(LogicInterpretation__c, &apos;&apos;), 
ISPICKVAL(CustomerPerception__c, &apos;&apos;), 
ISPICKVAL(Document__c, &apos;&apos;), 
ISPICKVAL(FollowTheOperationProcess__c, &apos;&apos;), 
ISPICKVAL(OfflinePrompt__c, &apos;&apos;), 
ISPICKVAL(ProvideTheRightSolution__c, &apos;&apos;), 
ISPICKVAL(SoftSkill__c, &apos;&apos;), 
ISPICKVAL(SpecificationLanguage__c, &apos;&apos;), 
ISPICKVAL(TheStandardOpeningClosing__c, &apos;&apos;), 
ISPICKVAL(ProperPronunciation__c, &apos;&apos;) 
)
), 
AND(
RecordType.Name == &apos;SSI&apos;, 
OR(
ISPICKVAL(CITQ__c, &apos;&apos;), 
ISPICKVAL(PACI__c, &apos;&apos;), 
ISPICKVAL(DA__c, &apos;&apos;), 
ISPICKVAL(FTOP__c, &apos;&apos;), 
ISPICKVAL(FMSK__c, &apos;&apos;), 
ISPICKVAL(FQL__c, &apos;&apos;), 
ISPICKVAL(SO__c, &apos;&apos;), 
ISPICKVAL(PPIS__c, &apos;&apos;), 
ISPICKVAL(SPL__c, &apos;&apos;), 
ISPICKVAL(SSL__c, &apos;&apos;), 
ISPICKVAL(SC__c, &apos;&apos;), 
ISPICKVAL(CALA__c, &apos;&apos;), 
ISPICKVAL(CAI__c, &apos;&apos;), 
ISPICKVAL(CARR__c, &apos;&apos;), 
ISPICKVAL(PFOCF__c, &apos;&apos;), 
ISPICKVAL(PPD__c, &apos;&apos;), 
ISPICKVAL(PJ__c, &apos;&apos;), 
ISPICKVAL(PHU__c, &apos;&apos;)
))))</errorConditionFormula>
        <errorMessage>You have to fill in all the questionnaires.</errorMessage>
    </validationRules>
</CustomObject>